--- a/guardian/index.html
+++ b/guardian/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <nav id="menu"></nav>
+    <ul id="articles"></ul>
     <script type="module" src="/src/js/index.js"></script>
   </body>
 </html>
